--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,11 +33,15 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Build Project
+        run: |
+          pnpm i
+          pnpm build --base=/${{github.event.repository.name}}/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           # Upload entire repository
-          path: '.'
+          path: './dist/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
